--- a/package.json
+++ b/package.json
@@ -13,23 +13,24 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.0.0",
+    "@angular/cli": "~6.0.0",
     "@angular/common": "^6.0.0",
     "@angular/compiler": "^6.0.0",
+    "@angular/compiler-cli": "^6.0.0",
     "@angular/core": "^6.0.0",
     "@angular/forms": "^6.0.0",
     "@angular/http": "^6.0.0",
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
+    "@nicky-lenaers/ngx-scroll-to": "^1.1.1",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "ngx-spinner": "^6.1.2",
     "path": "^0.12.7",
     "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26",
-    "@angular/compiler-cli": "^6.0.0",
-    "@angular/cli": "~6.0.0",
-    "typescript": "~2.7.2"
+    "typescript": "~2.7.2",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.0",
